@@ -4,54 +4,57 @@ import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang3.exception.ExceptionUtils;
-import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.validation.ObjectError;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.support.WebExchangeBindException;
 import org.springframework.web.server.ServerWebExchange;
 
-import java.time.LocalDateTime;
+import java.time.Instant;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 @ControllerAdvice
 @Slf4j
 public class GlobalExceptionHandler {
 
 
-    @ExceptionHandler(value = WebExchangeBindException.class)
-    public ResponseEntity<?> handleBadRequest(WebExchangeBindException exception, ServerWebExchange exchange) {
+    @ExceptionHandler(WebExchangeBindException.class)
+    public ResponseEntity<ErrorResponse> handleWebExchangeBindException(
+            WebExchangeBindException exception, ServerWebExchange exchange) {
+
         // Dynamically get the API path from the request
         String apiPath = exchange.getRequest().getURI().getPath();
 
-        // Get the timestamp of the error
-        String timestamp = LocalDateTime.now().toString();
+        // Get the timestamp of the error in UTC
+        String timestamp = Instant.now().toString();
 
         // Extract error messages from the exception (all field validation errors)
-        List<String> message = exception.getBindingResult().getAllErrors().stream().map(DefaultMessageSourceResolvable::getDefaultMessage)
+        List<String> errorMessages = exception.getBindingResult().getAllErrors().stream()
+                .map(ObjectError::getDefaultMessage)  // Extract default error message
                 .filter(Objects::nonNull)
                 .sorted()
-                .toList();
+                .collect(Collectors.toList());
 
         // Log the error with the exception stack trace
         log.error("Bad request occurred at {} on API path {}: {}", timestamp, apiPath,
-                ExceptionUtils.getStackTrace(exception));
+                exception.getMessage(), exception);  // Improved logging format
 
-        // Build the error response body
+        // Create an error response
         ErrorResponse errorResponse = new ErrorResponse(
                 HttpStatus.BAD_REQUEST.value(),
                 "BAD_REQUEST",
-                message,
+                errorMessages,
                 apiPath,
-                timestamp);
+                timestamp
+        );
 
         // Return the error response with the detailed information
         return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(errorResponse);
     }
-
 
     @Data
     @AllArgsConstructor
